# niri-taskbar

./: Cargo.toml  LICENSE  README.md
src/: button.rs  config.rs  error.rs  icon.rs  lib.rs  niri.rs  notify.rs  output.rs  process.rs  state.rs  style.css
src/niri/: reply.rs  state.rs  window_stream.rs
src/notify/: cache.rs
