[package]
name = "niri-taskbar"
description = "Niri taskbar module for Waybar"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/LawnGnome/niri-taskbar"
rust-version = "1.87.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-channel = "2.3.1"
freedesktop-icons = "0.4.0"
itertools = "0.14.0"
linicon = "2.3.0"
niri-ipc = "25.1.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.12"
waybar-cffi = "0.1.0"
